cluster/apps/ubooquity/firefly/ubooquity.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ubooquity
  namespace: ubooquity
spec:
  selector:
    matchLabels:
      app: ubooquity
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: ubooquity
    spec:
      containers:
        - image: lscr.io/linuxserver/ubooquity
          name: ubooquity
          ports:
            - name: library
              containerPort: 2202
            - name: admin
              containerPort: 2203
          volumeMounts:
            - mountPath: "/files"
              name: ubooquity
              subPath: "files"
            - mountPath: "/config"
              name: ubooquity
              subPath: "config"
            - mountPath: /books
              name: books
          imagePullPolicy: IfNotPresent
      volumes:
        - name: ubooquity
          persistentVolumeClaim:
            claimName: ubooquity
        - name: books
          nfs:
            path: /mnt/tank/media/books
            server: nfs.truenas.${DOMAIN}
