cluster/apps/ubooquity/firefly/ubooquity.svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: ubooquity
  namespace: ubooquity
spec:
  clusterIP: None
  ports:
    - name: admin
      port: 2203
    - name: library
      port: 2202
  selector:
    app: ubooquity
